--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="result-content">
                     <h4 id="tech-title-display"></h4>
-                    <p id="result-explanation"></p>
+                    <p id="result-explanation" class="result-explanation"></p>
                     <div id="tcp-pathway-scores" class="tcp-scores-container" style="display: none;">
                         <h4>Pathway Scores:</h4>
                         <div id="pathway-scores-list"></div>
